# manhua_cleaner

./: .env.example  .gitignore  README.md  pyproject.toml  run_gui.py
manhua_cleaner/: __init__.py  cli.py  config.py  exceptions.py
manhua_cleaner/adapters/: __init__.py
manhua_cleaner/adapters/models/: __init__.py  flux_adapter.py  longcat_adapter.py
manhua_cleaner/adapters/ocr/: __init__.py  paddle_adapter.py
manhua_cleaner/application/: __init__.py
manhua_cleaner/application/ports/: __init__.py  cache.py  event_publisher.py  image_model.py  ocr_engine.py
manhua_cleaner/application/services/: __init__.py  batch_processor.py  text_removal.py
manhua_cleaner/core/: __init__.py  image_ops.py  ocr.py  ocr_base.py  ocr_easyocr.py  ocr_factory.py  ocr_paddle.py  processor.py  text_region.py  textbox_grouper.py  whitelist_filter.py  worker.py
manhua_cleaner/domain/: __init__.py
manhua_cleaner/domain/entities/: __init__.py  image.py  text_region.py
manhua_cleaner/domain/services/: __init__.py  box_merging.py  smart_fill.py  text_grouping.py
manhua_cleaner/domain/value_objects/: __init__.py  config.py  geometry.py
manhua_cleaner/gui/: __init__.py  gui_settings.ini  main_window.py  preview_manager.py  processing_controller.py  settings_manager.py
manhua_cleaner/infrastructure/: __init__.py  plugin_registry.py
manhua_cleaner/interfaces/: __init__.py
manhua_cleaner/interfaces/cli/: __init__.py  main.py
manhua_cleaner/models/: __init__.py  base.py  flux_model.py  longcat_model.py
manhua_cleaner/tests/: __init__.py  test_config.py  test_image_ops.py  test_ocr.py  test_processor.py  test_worker_pool.py
manhua_cleaner/tests/unit/: test_box_merging.py  test_config.py  test_geometry.py
manhua_cleaner/utils/: env.py
